kubernetes/namespaces/merch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thallium-backend-svc
  namespace: merch
spec:
  selector:
    app: thallium-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
